// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flags > --records-* > input-output should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "recordsInputPath": "<PROJECT_ROOT>/dist/records-input.json",
  "recordsOutputPath": "<PROJECT_ROOT>/dist/records-output.json",
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --records-* > input-output should build #0 1`] = `
"Version: webpack 4.12.1
  Asset      Size  Chunks             Chunk Names
main.js  3.92 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]"
`;

exports[`Flags > --records-* > input-output should build #1 1`] = `"1c77bf93"`;

exports[`Flags > --records-* > path should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "recordsPath": "<PROJECT_ROOT>/dist/records.json",
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --records-* > path should build #0 1`] = `
"Version: webpack 4.12.1
  Asset      Size  Chunks             Chunk Names
main.js  3.92 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]"
`;

exports[`Flags > --records-* > path should build #1 1`] = `"1c77bf93"`;
